# webassembly-component-model-sample

./: .gitignore  .justfile  README.md  default.nix  flake.nix  rust-toolchain.toml  shell.nix
calculator/: Cargo.toml
calculator/src/: lib.rs
calculator/wit/: world.wit
math/: Cargo.toml
math/src/: lib.rs
math/wit/: world.wit
standalone/: Cargo.toml
standalone/src/: main.rs
standalone/wit/: world.wit
